--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "webpack",
     "watch": "webpack --watch"
   },
-  "keywords": ["roam-research", "plugin"],
+  "keywords": [
+    "roam-research",
+    "plugin"
+  ],
   "author": "",
   "license": "MIT",
   "devDependencies": {
@@ -18,4 +21,4 @@
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
   }
-} 
+}
